# invenio-alma

./: CHANGES.rst  MANIFEST.in  pyproject.toml  setup.cfg
docs/: conf.py
invenio_alma/: __init__.py  cli.py  click_param_type.py  config.py  decorators.py  ext.py  jobs.py  proxies.py  tasks.py
invenio_alma/data/: example-marc21.json
invenio_alma/resources/: __init__.py  config.py  resources.py
invenio_alma/services/: __init__.py  alma.py  base.py  config.py  rest.py  sru.py
invenio_alma/services/config/: config.py
tests/: conftest.py  test_invenio_alma_service.py
