[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
exclude = ["docs"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "D203", "D211", "D212", "D213",
  "E501",
  "FA102",
  "INP001",
  "G",
  "N802",
  "PERF203",
  "PLR0913", "PLR0911",
  "RET504",
  "S101",
  "TCH",
  "TD",
  "TRY300", "TRY400",
  "UP009"
]

[tool.ruff.lint.per-file-ignores]
"tests/**.py" = [
  "ARG001",
  "FBT001",
  "SLF001",
]
